fixing dark mode for the cart page

--- a/css/cart.css
+++ b/css/cart.css
@@ -34,7 +34,7 @@ body {
     height: 200px;
     overflow: hidden;
     margin-bottom: 20px;
-    background: #fff;
+    /* background: #fff; */
     transition: all .6s ease;
     box-shadow: rgba(100, 100, 111, 0.2);
 }
@@ -100,7 +100,7 @@ body {
     padding: 20px;
     height: 400px;
     border-radius: 5px;
-    background: #fff;
+    /* background: #fff; */
     box-shadow: rgba(100, 100, 111, 0.2);
 }
 
